<resources>
    <string name="app_name">SubmitionDicoding2</string>
    <string name="searchbar_hint">Masukkan kata</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="follower_text">Followers</string>
    <string name="following_text">Followers</string>
    <string name="not_load">Data Not Load</string>
    <string name="avatar">avatar user</string>
    <string name="username">username</string>
    <string name="full_name">Full Name</string>

</resources>