<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.DetailUser">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <ImageView
                tools:src="@tools:sample/avatars"
                android:layout_width="match_parent"
                android:contentDescription="@string/avatar"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
                android:text="@string/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/username"
                android:layout_marginTop="12dp"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/full_name" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="174dp" android:layout_marginEnd="175dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"/>
        <TextView
                android:text="@string/full_name"
                android:textSize="25sp"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/full_name"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/imageView" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>



        <TextView android:layout_width="208dp" android:layout_height="17dp"
                  android:gravity="center"
                  android:id="@+id/Following"
                  android:text="@string/following_text"
                  app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toStartOf="@+id/Followers"
                  android:layout_marginEnd="2dp" android:layout_marginTop="3dp"
                  app:layout_constraintTop_toBottomOf="@+id/username"/>
        <TextView
                android:text="@string/follower_text"
                android:layout_width="202dp"
                android:gravity="center"
                android:layout_height="16dp" android:id="@+id/Followers"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="2dp"
                app:layout_constraintStart_toEndOf="@+id/Following" android:layout_marginTop="3dp"
                app:layout_constraintTop_toBottomOf="@+id/username"/>
        <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                app:tabTextColor="@android:color/white"
                android:layout_marginTop="13dp"
                app:layout_constraintTop_toBottomOf="@+id/Followers" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tabs" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">
        </androidx.viewpager2.widget.ViewPager2>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>